<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_airplane_mode">Airplane mode.</string>
    <string name="accessibility_back">Back</string>
    <string name="accessibility_brightness">Display brightness</string>
    <string name="accessibility_desc_add">Add</string>
    <string name="accessibility_desc_close">Close</string>
    <string name="accessibility_desc_edit">Edit</string>
    <string name="accessibility_desc_remove">Remove</string>
    <string name="accessibility_description_hours">Hours</string>
    <string name="accessibility_description_minutes">Minutes</string>
    <string name="accessibility_description_seconds">Seconds</string>
    <string name="accessibility_detail_switch">Switch between toggles</string>
    <string name="accessibility_detail_switch_disable">Not available</string>
    <string name="accessibility_detail_switch_off">Turn off</string>
    <string name="accessibility_detail_switch_on">Turn on</string>
    <string name="accessibility_expand_button">Show more</string>
    <string name="accessibility_menu">Menu</string>
    <string name="accessibility_qs_edit_position_label">Position %1$d. Double tap to select.</string>
    <string name="accessibility_qs_edit_tile_added">%1$s is added to position %2$d</string>
    <string name="accessibility_qs_edit_tile_moved">%1$s moved to position %2$d</string>
    <string name="accessibility_qs_edit_tile_removed">%1$s is removed</string>
    <string name="accessibility_quick_settings_page">Page %1$d of %2$d</string>
    <string name="accessibility_settings">Settings</string>
    <string name="accessibility_sliding_button_state_description_off">Turned off</string>
    <string name="accessibility_sliding_button_state_description_on">Turned on</string>
    <string name="accessibility_tab_state_description_unselect">Not selected</string>
    <string name="accessibility_tab_statedesc_unselect">Not selected</string>
    <string name="accessibility_volume_collapse">Collapse</string>
    <string name="accessibility_volume_expand">Expand</string>
    <string name="actionbar_button_up_description">Back</string>
    <string name="afternoon">Afternoon</string>
    <string name="airplane_mode">Airplane mode</string>
    <string name="already_in_small_freeform">Some apps are opened in floating windows</string>
    <string name="am">AM</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">System UI Plug-in</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="brightness_setting_panel_title">Brightness settings panel</string>
    <string name="bt_is_off">Bluetooth is off</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chinese_day_1">初一</string>
    <string name="chinese_day_10">初十</string>
    <string name="chinese_day_11">十一</string>
    <string name="chinese_day_12">十二</string>
    <string name="chinese_day_13">十三</string>
    <string name="chinese_day_14">十四</string>
    <string name="chinese_day_15">十五</string>
    <string name="chinese_day_16">十六</string>
    <string name="chinese_day_17">十七</string>
    <string name="chinese_day_18">十八</string>
    <string name="chinese_day_19">十九</string>
    <string name="chinese_day_2">初二</string>
    <string name="chinese_day_20">二十</string>
    <string name="chinese_day_21">廿一</string>
    <string name="chinese_day_22">廿二</string>
    <string name="chinese_day_23">廿三</string>
    <string name="chinese_day_24">廿四</string>
    <string name="chinese_day_25">廿五</string>
    <string name="chinese_day_26">廿六</string>
    <string name="chinese_day_27">廿七</string>
    <string name="chinese_day_28">廿八</string>
    <string name="chinese_day_29">廿九</string>
    <string name="chinese_day_3">初三</string>
    <string name="chinese_day_30">三十</string>
    <string name="chinese_day_4">初四</string>
    <string name="chinese_day_5">初五</string>
    <string name="chinese_day_6">初六</string>
    <string name="chinese_day_7">初七</string>
    <string name="chinese_day_8">初八</string>
    <string name="chinese_day_9">初九</string>
    <string name="chinese_day_elementary">初</string>
    <string name="chinese_digit_eight">八</string>
    <string name="chinese_digit_five">五</string>
    <string name="chinese_digit_four">四</string>
    <string name="chinese_digit_nine">九</string>
    <string name="chinese_digit_one">一</string>
    <string name="chinese_digit_seven">七</string>
    <string name="chinese_digit_six">六</string>
    <string name="chinese_digit_ten">十</string>
    <string name="chinese_digit_three">三</string>
    <string name="chinese_digit_two">二</string>
    <string name="chinese_digit_zero">〇</string>
    <string name="chinese_leap">闰</string>
    <string name="chinese_month">月</string>
    <string name="chinese_month_april">四</string>
    <string name="chinese_month_august">八</string>
    <string name="chinese_month_december">腊</string>
    <string name="chinese_month_february">二</string>
    <string name="chinese_month_january">正</string>
    <string name="chinese_month_july">七</string>
    <string name="chinese_month_june">六</string>
    <string name="chinese_month_march">三</string>
    <string name="chinese_month_may">五</string>
    <string name="chinese_month_november">冬</string>
    <string name="chinese_month_october">十</string>
    <string name="chinese_month_september">九</string>
    <string name="chinese_symbol_animals_chicken">鸡</string>
    <string name="chinese_symbol_animals_cow">牛</string>
    <string name="chinese_symbol_animals_dog">狗</string>
    <string name="chinese_symbol_animals_dragon">龙</string>
    <string name="chinese_symbol_animals_horse">马</string>
    <string name="chinese_symbol_animals_monkey">猴</string>
    <string name="chinese_symbol_animals_mouse">鼠</string>
    <string name="chinese_symbol_animals_pig">猪</string>
    <string name="chinese_symbol_animals_rabbit">兔</string>
    <string name="chinese_symbol_animals_sheep">羊</string>
    <string name="chinese_symbol_animals_snake">蛇</string>
    <string name="chinese_symbol_animals_tiger">虎</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clearable_edittext_clear_description">Clear</string>
    <string name="close">Close</string>
    <string name="close_invisible_mode_dialog_cancel">Cancel</string>
    <string name="close_invisible_mode_dialog_message">Can\'t use Mi Smart Play now. Turn off Incognito mode in the Settings to be able to use this feature.</string>
    <string name="close_invisible_mode_dialog_ok">Settings</string>
    <string name="close_invisible_mode_dialog_title">You\'re incognito</string>
    <string name="config_bodyFontFamily">sans-serif</string>
    <string name="config_bodyFontFamilyMedium">sans-serif-medium</string>
    <string name="control_center_notification_switch_guide">Swipe to switch between Control center and Notification shade</string>
    <string name="control_quick_settings_tiles_super_save">gps,nfc,screenshot,vibrate</string>
    <string name="controls_add_device_guide">You haven\'t added any smart home devices yet</string>
    <string name="controls_click_to_add_device">Add</string>
    <string name="controls_confirmation_message">Confirm change for %s</string>
    <string name="controls_default_structure">Smart home</string>
    <string name="controls_dialog_confirmation">Controls updated</string>
    <string name="controls_dialog_message">%s suggested this control to add to your favorites.</string>
    <string name="controls_dialog_ok">Add to favorites</string>
    <string name="controls_dialog_title">Add to device controls</string>
    <string name="controls_dismiss_dialog_cancel">No thanks</string>
    <string name="controls_dismiss_dialog_cancel_international">Cancel</string>
    <string name="controls_dismiss_dialog_confirm">Settings</string>
    <string name="controls_dismiss_dialog_confirm_international">Remove</string>
    <string name="controls_dismiss_dialog_message">Manage smart home devices from multiple apps in Control center</string>
    <string name="controls_dismiss_dialog_message_international">Remove \"Smart home\" card now? You\'ll be able to restore it in Settings &gt; Control center.</string>
    <string name="controls_loading_device">Switching locations…</string>
    <string name="media_panel_description">Xiaomi Smart Play</string>
    <string name="miplay_accessibility_cast">Select device</string>
    <string name="miplay_accessibility_cover">Cover</string>
    <string name="miplay_accessibility_next">Next song</string>
    <string name="miplay_accessibility_play">Play</string>
    <string name="miplay_accessibility_prev">Previous song</string>
    <string name="miplay_detail_header_no_song">Not playing</string>
    <string name="smart_home_title">Smart devices</string>
</resources>