<?xml version="1.0" encoding="utf-8"?>
<com.android.systemui.ControlCenterMiPlayView xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:id="@+id/miplay_view"
    android:background="@drawable/control_center_miplay_view_bg"
    android:clipToPadding="false"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/miplay_view_padding_start_end"
    android:paddingEnd="@dimen/miplay_view_padding_start_end">
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_width="@dimen/miplay_view_title_width"
        android:layout_height="@dimen/miplay_view_height">
        <com.android.systemui.MarqueeTextView
            android:textSize="@dimen/miplay_view_title_text_size"
            android:textColor="@color/qs_miplay_view_action_tint"
            android:ellipsize="end"
            android:id="@+id/audio_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/miplay_detail_header_no_song"
            android:singleLine="true"/>
        <TextView
            android:textSize="@dimen/miplay_view_artist_text_size"
            android:textColor="@color/miplay_view_title_color"
            android:id="@+id/audio_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/miplay_view_artist_margin_top"
            android:singleLine="true"
            android:alpha="0.4"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/prev"
        android:layout_width="@dimen/miplay_view_action_size"
        android:layout_height="@dimen/miplay_view_action_size"
        android:src="@drawable/miplay_view_prev"
        android:tint="@color/qs_miplay_view_action_tint"
        android:contentDescription="@string/miplay_accessibility_prev"
        android:tintMode="src_in"/>
    <ImageView
        android:id="@+id/play"
        android:layout_width="@dimen/miplay_view_action_size"
        android:layout_height="@dimen/miplay_view_action_size"
        android:src="@drawable/miplay_view_play"
        android:tint="@color/qs_miplay_view_action_tint"
        android:contentDescription="@string/miplay_accessibility_play"
        android:layout_marginStart="@dimen/miplay_view_action_margin_start_end"
        android:tintMode="src_in"/>
    <ImageView
        android:id="@+id/next"
        android:layout_width="@dimen/miplay_view_action_size"
        android:layout_height="@dimen/miplay_view_action_size"
        android:src="@drawable/miplay_view_next"
        android:tint="@color/qs_miplay_view_action_tint"
        android:contentDescription="@string/miplay_accessibility_next"
        android:layout_marginStart="@dimen/miplay_view_action_margin_start_end"
        android:tintMode="src_in"/>
    <ImageView
        android:id="@+id/select_device"
        android:layout_width="@dimen/miplay_view_action_select_device_size"
        android:layout_height="@dimen/miplay_view_action_select_device_size"
        android:src="@drawable/miplay_select_device"
        android:contentDescription="@string/miplay_accessibility_cast"
        android:layout_marginStart="@dimen/miplay_view_action_select_device_margin_start"/>
</com.android.systemui.ControlCenterMiPlayView>
