<?xml version="1.0" encoding="utf-8"?>
<com.android.systemui.MiPlayView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:id="@+id/miplay_view"
    android:paddingTop="@dimen/miplay_view_expand_padding_top"
    android:paddingBottom="@dimen/miplay_view_expand_padding_bottom"
    android:clipToPadding="false"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/miplay_view_expand_padding_start"
    android:paddingEnd="@dimen/miplay_view_expand_padding_end">
    <TextView
        android:textSize="@dimen/miplay_view_title_text_fixed_size"
        android:textColor="@color/qs_miplay_view_action_tint"
        android:ellipsize="end"
        android:id="@+id/audio_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/miplay_detail_header_no_song"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/audio_artist"
        app:layout_constraintEnd_toStartOf="@+id/prev"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>
    <TextView
        android:textSize="@dimen/miplay_view_artist_text_fixed_size"
        android:textColor="@color/miplay_view_title_color"
        android:ellipsize="end"
        android:id="@+id/audio_artist"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/miplay_view_artist_margin_top"
        android:maxLines="1"
        android:alpha="0.4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/prev"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/audio_title"
        app:layout_constraintTop_toBottomOf="@+id/audio_title"/>
    <ImageView
        android:id="@+id/prev"
        android:layout_width="@dimen/miplay_view_action_size"
        android:layout_height="@dimen/miplay_view_action_size"
        android:src="@drawable/miplay_view_prev"
        android:tint="@color/qs_miplay_view_action_tint"
        android:contentDescription="@string/miplay_accessibility_prev"
        android:layout_marginEnd="@dimen/miplay_view_action_margin_start_end"
        android:tintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/play"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/play"
        android:layout_width="@dimen/miplay_view_action_size"
        android:layout_height="@dimen/miplay_view_action_size"
        android:src="@drawable/miplay_view_play"
        android:tint="@color/qs_miplay_view_action_tint"
        android:contentDescription="@string/miplay_accessibility_play"
        android:layout_marginEnd="@dimen/miplay_view_action_margin_start_end"
        android:tintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/next"
        android:layout_width="@dimen/miplay_view_action_size"
        android:layout_height="@dimen/miplay_view_action_size"
        android:src="@drawable/miplay_view_next"
        android:tint="@color/qs_miplay_view_action_tint"
        android:contentDescription="@string/miplay_accessibility_next"
        android:layout_marginEnd="@dimen/miplay_view_action_select_device_margin_start"
        android:tintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/select_device"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/select_device"
        android:layout_width="@dimen/miplay_view_action_select_device_size"
        android:layout_height="@dimen/miplay_view_action_select_device_size"
        android:src="@drawable/miplay_select_device"
        android:contentDescription="@string/miplay_accessibility_cast"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</com.android.systemui.MiPlayView>
