<?xml version="1.0" encoding="utf-8"?>
<miui.systemui.controlcenter.panel.main.media.MediaPlayerPanel xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:id="@+id/media_player"
    android:background="@drawable/media_player_background"
    android:focusable="true"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:layout_width="@dimen/control_center_universal_2_rows_size"
    android:layout_height="@dimen/control_center_universal_2_rows_size"
    android:layout_margin="@dimen/control_center_universal_margin"
    android:contentDescription="@string/media_panel_description"
    android:importantForAccessibility="yes">
    <miui.systemui.widget.ImageView
        android:id="@+id/cover"
        android:background="@drawable/miplay_cover_default"
        android:visibility="invisible"
        android:layout_width="@dimen/media_player_cover_size"
        android:layout_height="@dimen/media_player_cover_size"
        android:layout_marginTop="@dimen/media_player_cover_margin"
        android:src="@drawable/miplay_cover_default"
        android:scaleType="centerCrop"
        android:contentDescription="@string/miplay_accessibility_cover"
        android:importantForAccessibility="yes"
        android:layout_marginStart="@dimen/media_player_cover_margin"
        android:outlineProvider="background"
        android:clipToOutline="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <miui.systemui.widget.ImageView
        android:id="@+id/device_icon"
        android:clickable="false"
        android:layout_width="@dimen/media_player_device_icon_size"
        android:layout_height="@dimen/media_player_device_icon_size"
        android:layout_margin="@dimen/media_player_device_icon_margin"
        android:src="@drawable/ic_media_device_default"
        android:contentDescription="@string/miplay_accessibility_cast"
        android:importantForAccessibility="yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <miui.systemui.widget.TextView
        android:ellipsize="end"
        android:id="@+id/title"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/media_player_title_margin_top"
        android:singleLine="true"
        android:importantForAccessibility="yes"
        android:fontFamily="sans-serif-medium"
        android:layout_marginStart="@dimen/media_player_title_margin_start"
        android:layout_marginEnd="@dimen/media_player_title_margin_end"
        app:layout_constraintBottom_toTopOf="@+id/artist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cover"
        app:layout_constraintVertical_chainStyle="packed"
        style="@style/TextAppearance.MediaPlayer.Title"/>
    <miui.systemui.widget.TextView
        android:id="@+id/artist"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/media_player_artist_margin_top"
        android:text="artist"
        android:singleLine="true"
        android:importantForAccessibility="yes"
        android:fontFamily="sans-serif-normal"
        android:layout_marginStart="@dimen/media_player_artist_margin_start"
        android:layout_marginEnd="@dimen/media_player_artist_margin_end"
        app:layout_constraintBottom_toTopOf="@+id/audio_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        style="@style/TextAppearance.MediaPlayer.Artist"/>
    <miui.systemui.widget.TextView
        android:gravity="top|center_horizontal"
        android:id="@+id/empty_state"
        android:layout_width="match_parent"
        android:layout_height="@dimen/media_player_empty_height"
        android:layout_marginTop="@dimen/media_player_empty_state_margin_top"
        android:text="@string/miplay_detail_header_no_song"
        android:singleLine="true"
        android:importantForAccessibility="yes"
        android:fontFamily="sans-serif-medium"
        android:layout_marginHorizontal="@dimen/media_player_empty_state_margin_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="wrap"
        style="@style/TextAppearance.MediaPlayer.EmptyState"/>
    <miui.systemui.widget.ConstraintLayout
        android:id="@+id/audio_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/media_player_button_margin_bottom"
        android:layout_marginStart="@dimen/media_player_button_margin_horizontal"
        android:layout_marginEnd="@dimen/media_player_button_margin_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <miui.systemui.widget.ImageView
            android:id="@+id/prev"
            android:layout_width="@dimen/media_player_button_size"
            android:layout_height="@dimen/media_player_button_size"
            android:src="@drawable/ic_media_prev"
            android:tint="@color/qs_media_player_action_tint"
            android:contentDescription="@string/miplay_accessibility_prev"
            android:layoutDirection="ltr"
            android:tintMode="src_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/play"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <miui.systemui.widget.ImageView
            android:id="@+id/play"
            android:layout_width="@dimen/media_player_button_size"
            android:layout_height="@dimen/media_player_button_size"
            android:src="@drawable/ic_media_play"
            android:tint="@color/qs_media_player_action_tint"
            android:contentDescription="@string/miplay_accessibility_play"
            android:layoutDirection="ltr"
            android:tintMode="src_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/next"
            app:layout_constraintStart_toEndOf="@+id/prev"
            app:layout_constraintTop_toTopOf="parent"/>
        <miui.systemui.widget.ImageView
            android:id="@+id/next"
            android:layout_width="@dimen/media_player_button_size"
            android:layout_height="@dimen/media_player_button_size"
            android:src="@drawable/ic_media_next"
            android:tint="@color/qs_media_player_action_tint"
            android:contentDescription="@string/miplay_accessibility_next"
            android:layoutDirection="ltr"
            android:tintMode="src_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/play"
            app:layout_constraintTop_toTopOf="parent"/>
    </miui.systemui.widget.ConstraintLayout>
</miui.systemui.controlcenter.panel.main.media.MediaPlayerPanel>
