<?xml version="1.0" encoding="utf-8"?>
<miui.systemui.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true">
    <ImageView
        android:id="@+id/iv_back_icon"
        android:layout_width="@dimen/device_controls_header_icon_size"
        android:layout_height="@dimen/device_controls_header_icon_size"
        android:src="@drawable/ic_arrow_back"
        android:scaleType="center"
        android:layout_centerVertical="true"
        android:contentDescription="@string/accessibility_back"
        android:layout_alignParentStart="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:id="@+id/ll_drop_down"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iv_edit_icon"
        app:layout_constraintStart_toEndOf="@+id/iv_back_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginEnd="@dimen/device_controls_header_icon_size">
        <TextView
            android:textSize="@dimen/device_controls_header_text_size"
            android:textColor="@color/controls_header_color"
            android:ellipsize="end"
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smart_home_title"
            android:maxLines="1"/>
        <ImageView
            android:id="@+id/iv_anchor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_up_down_arrow"
            android:layout_marginStart="@dimen/device_controls_edit_item_icon_margin_start"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/iv_edit_icon"
        android:layout_width="@dimen/device_controls_header_icon_size"
        android:layout_height="@dimen/device_controls_header_icon_size"
        android:src="@drawable/ic_controls_edit"
        android:scaleType="center"
        android:contentDescription="@string/accessibility_desc_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</miui.systemui.widget.ConstraintLayout>
