<?xml version="1.0" encoding="utf-8"?>
<miui.systemui.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/ll_root"
    android:paddingTop="@dimen/device_controls_margin_top"
    android:clipToPadding="false"
    android:layout_width="@dimen/device_controls_panel_width"
    android:layout_height="wrap_content">
    <include
        android:id="@+id/controls_with_favorites_header"
        layout="@layout/controls_with_favorites_header"/>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/ll_empty"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <TextView
            android:textSize="@dimen/device_controls_subtitle_text_size"
            android:textColor="@color/controls_subtitle_color"
            android:gravity="center"
            android:id="@+id/tv_add_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/controls_add_device_guide"/>
        <Button
            android:textSize="@dimen/device_controls_subtitle_text_size"
            android:textColor="@color/controls_header_color"
            android:id="@+id/bt_add_device"
            android:background="@drawable/round_button"
            android:padding="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/controls_click_to_add_device"/>
    </LinearLayout>
    <TextView
        android:textSize="@dimen/device_controls_subtitle_text_size"
        android:textColor="@color/controls_subtitle_color"
        android:id="@+id/tv_loading"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/controls_loading_device"
        android:layout_centerInParent="true"/>
    <miui.systemui.devicecontrols.ui.widget.SpringBackLayout
        android:id="@+id/controls_list_container"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/device_controls_controls_layout_margin_top"
        app:scrollOrientation="vertical"
        app:scrollableView="@+id/rv_controls_list">
        <miuix.recyclerview.widget.RecyclerView
            android:id="@+id/rv_controls_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"/>
    </miui.systemui.devicecontrols.ui.widget.SpringBackLayout>
</miui.systemui.widget.RelativeLayout>
